# CSCI370-Project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  addToCSV  goCrow  httpTest  test_json.cpp
Data/: sampleMovies.csv  sampleMovies.sql  sampleReviews.csv  sampleReviews.sql  sampleUsers.csv  sampleUsers.sql  test.html
Docs/: conclusion.md  database_design.md  proposal.md  schema.sql  test_summary.md
Output/css/: style.css
include/: app.hpp  server.hpp
source/templates/: index.html
src/: Makefile  addToCSV.cpp  app.cpp  httplib_test.cpp  main.cpp  server.cpp  test_json.cpp
static/: style.css
templates/: index.html  movie.html
